[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/UI/MenuUI/menuButtonHovered.png" type="Texture" id=1]
[ext_resource path="res://Art/UI/MenuUI/menuButtonPressed.png" type="Texture" id=2]
[ext_resource path="res://Art/UI/MenuUI/menuButton.png" type="Texture" id=3]
[ext_resource path="res://Font/BAHNSCHRIFT.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Art/menuBackground.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=6]
[ext_resource path="res://Sounds/Music/Non-Spherical Orb.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Other Sounds/select.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 640, -100 )
amount = 120
lifetime = 10.0
speed_scale = 3.0
emission_shape = 2
emission_rect_extents = Vector2( 1280, 0 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 331.0
margin_top = 221.0
margin_right = 949.0
margin_bottom = 498.0
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 618.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
text = "inner wilds"
align = 1
valign = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 618.0
margin_bottom = 155.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 618.0
margin_bottom = 209.0
alignment = 1

[node name="playButton" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 184.0
margin_right = 434.0
margin_bottom = 50.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 2 )

[node name="play" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/playButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "play"
align = 1
valign = 1
uppercase = true

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 213.0
margin_right = 618.0
margin_bottom = 223.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 227.0
margin_right = 618.0
margin_bottom = 277.0
alignment = 1

[node name="instructionsButton" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 184.0
margin_right = 434.0
margin_bottom = 50.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/instructionsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "instructions"
align = 1
valign = 1
uppercase = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "Music"

[node name="menuSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[connection signal="button_down" from="CenterContainer/VBoxContainer/HBoxContainer/playButton" to="." method="_on_playButton_button_down"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/HBoxContainer/playButton" to="." method="_on_playButton_button_up"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/HBoxContainer/playButton" to="." method="_on_playButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/HBoxContainer/playButton" to="." method="_on_playButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/playButton" to="." method="_on_playButton_pressed"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/HBoxContainer2/instructionsButton" to="." method="_on_instructionsButton_button_down"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/HBoxContainer2/instructionsButton" to="." method="_on_instructionsButton_button_up"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/HBoxContainer2/instructionsButton" to="." method="_on_instructionsButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/HBoxContainer2/instructionsButton" to="." method="_on_instructionsButton_mouse_exited"]
